# flow-forge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci.yml  integration.yml
apps/backend/: .env.example  QUICKSTART.md  README.md  pyproject.toml  test_workflow_agent.py  test_workflow_e2e.py
apps/backend/kb/default/: onboarding_policy.md  roles.md  systems.md
apps/backend/src/backend/: config.py  main.py  models.py
apps/backend/src/backend/agents/: __init__.py  api_catalog.py  base.py  kb_search.py  tools.py  workflow_agent.py
apps/backend/src/backend/connectors/: __init__.py  base.py  github.py  google.py  hr.py  jira.py  registry.py  slack.py
apps/backend/src/backend/connectors/builder/: __init__.py  agent.py  template.py  validator.py
apps/backend/src/backend/mind/: __init__.py  config.py  database.py  memory.py  orchestrator.py  persistence.py  pipeline.py  store.py
apps/backend/src/backend/mind/tools/: factory.py  primitives.py
apps/backend/src/backend/simulator/: __init__.py  failures.py  services.py  state.py
apps/backend/src/backend/workflow/: executor.py  pipeline.py  report.py  schema.py  store.py
apps/backend/tests/: test_integration_mind_openrouter.py  test_integration_openrouter.py  test_mind_api.py  test_mind_persistence.py  test_workflow_engine_core.py  test_workflow_generation.py
apps/frontend/: package.json  tailwind.config.js
apps/frontend/src/: App.css  App.svelte  App.tsx  index.css
apps/frontend/src/components/activity/: ExecutionReportSection.tsx  MetricsBar.tsx  (+2 more)
apps/frontend/src/hooks/: useAutoScroll.ts  useExecutionReplay.ts  useSSEStream.ts
apps/frontend/src/store/: workflowStore.ts
apps/frontend/src/types/: api.ts  workflow.ts
apps/frontend/src/utils/: workflowParser.ts
(+15 files in other folders)
