[project]
name = "backend"
version = "0.1.0"
description = "FlowForge Backend - AI agents that design, build, and run workflows from natural language"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.3",
    "uvicorn>=0.40.0",
    "anthropic>=0.40.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.4.0",
    "python-dotenv>=1.0.0",
    "pi-agent-core>=0.1.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
